# px4_ros2_ws

./: .gitignore  .gitmodules  README.md
.runtime/: launch_stack_terminal.sh  ros2_autonomy_env.sh  start_agent.sh  start_gz_scan_distance.sh  start_px4_sitl.sh  start_qgc.sh  start_ros2_autonomy.sh  wait_for_external_mode.sh  wait_for_fmu.sh  wait_for_qgc_start.sh
docs/: AUTONOMY_NEXT_STEPS.md  CODE_IMPLEMENTATION_README.md  FAST_LIO2_INTEGRATION_PLAN.md  HEADLESS_EGO_AVOIDANCE_VALIDATION.md  REAL_FLIGHT_HANDOVER_CHECKLIST.md  REAL_HARDWARE_DEPLOYMENT_SOP.md  优化.md
missions/: my_mission.yaml  sample_mission.yaml
py_pubsub/: package.xml  setup.py
scripts/: bootstrap_planning_stack.sh  check_ego_planner_log.py  check_planning_prereqs.sh  check_planning_runtime.sh  check_real_bench_readiness.py  collect_planning_diagnostics.sh  install_livox_sdk2.sh  poststart_planning_check.sh  run_ego_planner_validation.sh  run_ego_sim_regression.sh  simulate_qgc_goto.sh  start_autonomy_with_planning.sh  start_px4_sim.sh  start_real_autonomy.sh  stop_px4_sim.sh  validate_ego_small_goal_handover.py  validate_fastlio_ego_avoidance.py  validate_qgc_rtl_takeover.sh
src/ego_planner_swarm_ros2_upstream/: .gitignore  Readme.md
src/ego_planner_swarm_ros2_upstream/src/planner/bspline_opt/: CMakeLists.txt  package.xml
src/ego_planner_swarm_ros2_upstream/src/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/ego_planner_swarm_ros2_upstream/src/planner/bspline_opt/src/: bspline_optimizer.cpp
src/ego_planner_swarm_ros2_upstream/src/planner/path_searching/: CMakeLists.txt  package.xml
src/ego_planner_swarm_ros2_upstream/src/planner/path_searching/include/path_searching/: dyn_a_star.h
src/ego_planner_swarm_ros2_upstream/src/planner/path_searching/src/: dyn_a_star.cpp
src/ego_planner_swarm_ros2_upstream/src/planner/plan_env/: CMakeLists.txt
src/ego_planner_swarm_ros2_upstream/src/planner/plan_env/include/plan_env/: linear_obj_model.hpp
src/ego_planner_swarm_ros2_upstream/src/planner/plan_env/src/: obj_generator.cpp  obj_predictor.cpp
src/ego_planner_swarm_ros2_upstream/src/planner/plan_manage/: CMakeLists.txt
src/ego_planner_swarm_ros2_upstream/src/planner/plan_manage/launch/: advanced_param.launch.py  run_in_sim.launch.py  simulator.launch.py  single_run_in_sim.launch.py  swarm.launch.py  swarm_large.launch.py
src/ego_planner_swarm_ros2_upstream/src/planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp  traj_server.cpp
src/ego_planner_swarm_ros2_upstream/src/planner/traj_utils/: CMakeLists.txt
src/ego_planner_swarm_ros2_upstream/src/planner/traj_utils/msg/: Bspline.msg  MultiBsplines.msg
src/ego_planner_swarm_ros2_upstream/src/uav_simulator/Utils/quadrotor_msgs/: CMakeLists.txt
src/fast_lio/: README.md
src/fast_lio/config/: avia.yaml  horizon.yaml  mid360.yaml  ouster64.yaml  velodyne.yaml
src/fast_lio/include/: Exp_mat.h  common_lib.h  matplotlibcpp.h  use-ikfom.hpp
src/fast_lio/include/IKFoM_toolkit/esekfom/: esekfom.hpp  util.hpp
src/fast_lio/include/IKFoM_toolkit/mtk/: build_manifold.hpp  startIdx.hpp
src/fast_lio/include/IKFoM_toolkit/mtk/src/: SubManifold.hpp  mtkmath.hpp  vectview.hpp
src/fast_lio/include/IKFoM_toolkit/mtk/types/: S2.hpp  SOn.hpp  vect.hpp  wrapped_cv_mat.hpp
src/fast_lio/rviz/: fastlio.rviz
src/fast_lio/src/: IMU_Processing.hpp  laserMapping.cpp  preprocess.cpp  preprocess.h
src/livox_ros_driver2/: CHANGELOG.md  CMakeLists.txt  README.md
src/livox_ros_driver2/config/: MID360_config.json  MID360_config.mid360_nuc_template.json  display_point_cloud_ROS2.rviz
src/livox_ros_driver2/src/: driver_node.cpp  lds_lidar.cpp  lds_lidar.h  livox_ros_driver2.cpp
src/livox_ros_driver2/src/call_back/: lidar_common_callback.cpp  lidar_common_callback.h
src/livox_ros_driver2/src/comm/: comm.cpp  comm.h  ldq.h  lidar_imu_data_queue.h  pub_handler.cpp  pub_handler.h
src/livox_ros_driver2/src/parse_cfg_file/: parse_cfg_file.cpp  parse_cfg_file.h  parse_livox_lidar_cfg.h
src/px4_autonomy_bringup/: CMakeLists.txt  package.xml
src/px4_autonomy_bringup/config/: nav2_params.yaml
src/px4_autonomy_bringup/launch/: autonomy_stack.launch.py
src/px4_autonomy_mode/: CMakeLists.txt  package.xml
src/px4_autonomy_mode/include/px4_autonomy_mode/: autonomy_mode.hpp
src/px4_autonomy_mode/launch/: autonomy_mode.launch.py
src/px4_autonomy_mode/src/: main.cpp
src/px4_fastlio_bridge/: package.xml  setup.cfg  setup.py
src/px4_fastlio_bridge/config/: depth_camera_fastlio.yaml  mid360.yaml  mid360_ego_planner.template.yaml
src/px4_fastlio_bridge/launch/: fastlio_mapping.launch.py
src/px4_fastlio_bridge/px4_fastlio_bridge/: lio_odometry_bridge.py  mid360_sim_bridge.py  px4_imu_bridge.py
src/px4_gazebo_depth_bridge/: CMakeLists.txt  package.xml
src/px4_gazebo_depth_bridge/src/: gazebo_depth_to_pointcloud.cpp
src/px4_nav2_bridge/: package.xml  setup.cfg  setup.py
src/px4_nav2_bridge/px4_nav2_bridge/: odom_path_visualizer.py  px4_local_position_nav2_bridge.py  qgc_reposition_goal_bridge.py
src/px4_obstacle_tools/: package.xml  setup.cfg  setup.py
src/px4_obstacle_tools/launch/: obstacle_sim.launch.py
src/px4_obstacle_tools/px4_obstacle_tools/: discover_gz_scan_topic.py  gz_scan_min_distance.py  gz_scan_to_pointcloud.py  gz_six_direction_distance.py  gz_topic_reader.sh  laserscan_min_distance.py  laserscan_to_pointcloud.py  obstacle_distance_sim.py  pointcloud_min_distance.py  pointcloud_relay.py
src/px4_trajectory_interface/: CMakeLists.txt  package.xml
src/px4_trajectory_interface/launch/: ego_planner_offboard.launch.py  ego_planner_single.rviz
src/px4_trajectory_interface/src/: simple_avoidance_position_cmd.cpp  trajectory_interface.cpp
src/tf2_eigen_tuner/: CMakeLists.txt  package.xml
src/tf2_eigen_tuner/launch/: axes_with_rviz_launch.py
src/tf2_eigen_tuner/rviz/: default.rviz
src/tf2_eigen_tuner/src/: axes_publisher_node.cpp  multi_tuner_node.cpp  point_publisher_node.cpp
tools/: waypoint_editor.html
(+5 files in other folders)
