<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_autonomy_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and documentation for the PX4 ROS 2 autonomy workspace.</description>
  <maintainer email="p@example.com">p</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>livox_ros_driver2</exec_depend>
  <exec_depend>px4_autonomy_mode</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
